# sqlite-loadable-rs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  NOTES  NOTES.md  README  README.md  memvfs.sql  run-docker.sh  test.sql
.cargo/: config
.github/workflows/: release.yaml  test.yaml
benchmarks/: Makefile  README.md  go.mod  go.sum
benchmarks/scalar/: add_c.sh  add_go.sh  add_rs.sh  bench.sh  build-words.sql  results-add.json  results-surround.json  results-yo.json  scalar.c  scalar.go  surround_c.sh  surround_go.sh  surround_rs.sh  yo_c.sh  yo_go.sh  yo_rs.sh
benchmarks/series/: base.sh  bench.sh  results.json  series.c  series.go  series_c.sh  series_go.sh  series_rs.sh
benchmarks/vfs/io_uring/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  build.rs  iouring.sql  iouring.wal.sql  run-hyperfine.sh  test.sql
benchmarks/vfs/io_uring/examples/: conn.in  test_1.rs  test_10.rs  test_11.rs  test_12.rs  test_13.rs  test_14.rs  test_15.rs  test_16.rs  test_2.rs  test_3.rs  test_4.rs  test_5.rs  test_6.rs  test_7.rs  test_8.rs  test_9.rs
benchmarks/vfs/io_uring/include/: conn.in.rs
benchmarks/vfs/io_uring/src/: connection.rs  lib.rs  open.rs  ops.rs
benchmarks/vfs/io_uring/src/lock/: file.rs  kind.rs  lock.rs  mod.rs  open.rs  range.rs  traits.rs  wal.rs  wrapper.rs
benchmarks/vfs/io_uring/src/ops/: fd.rs  fixed.rs  mod.rs
benchmarks/vfs/io_uring/tests/: test_locks.rs  test_ops.rs  test_ops_fd.rs  test_ops_fixed.rs  test_vfs.rs
examples/: characters.rs  hello.rs  in.rs  load_permanent.rs  mem_vfs.in.rs  mem_vfs.rs  scalar.rs  series.rs  sum_int.rs  sum_int_aux.rs  test-examples.py  test.sql
include/: mem_vfs.in.rs
sqlite-loadable-macros/: Cargo.toml
sqlite-loadable-macros/src/: lib.rs
sqlite3ext-sys/: Cargo.toml  README.md  build.rs  wrapper.h
sqlite3ext-sys/src/: lib.rs
src/: api.rs  bit_flags.rs  collation.rs  constants.rs  entrypoints.rs  errors.rs  exec.rs  ext.rs  lib.rs  prelude.rs  scalar.rs  table.rs  vtab_argparse.rs  window.rs
src/vfs/: default.rs  file.rs  methods.rs  mod.rs  shim.rs  traits.rs  vfs.rs
tests/: test_collation.rs  test_exec.rs  test_find_function.rs  test_hello.rs  test_manual_load.rs  test_mem_vfs.rs  test_series.rs  test_sum_int.rs  test_sum_int_aux.rs  test_vtab_in.rs
tests/static_hello/: Makefile  go.mod  hello.h  test_auto.c  test_auto.go  test_manual.c
