[package]
name = "sqlite-loadable"
version = "0.0.1"
edition = "2021"

[dependencies]
sqlite3ext-sys = {path="./sqlite3ext-sys"}
sqlite-loadable-macros={path="./sqlite-loadable-macros"}
serde = {version="1.0.147", features = ["derive"]}
serde_json = "1.0.87"
bitflags = "1.3.2"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "series"
crate-type = ["cdylib"]

[[example]]
name = "scalar"
crate-type = ["cdylib"]

[[example]]
name = "characters"
crate-type = ["cdylib"]