[package]
name = "sqlite-loadable"
version = "0.0.3"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "A framework for building SQLite extensions in Rust"
homepage = "https://github.com/asg017/sqlite-loadable-rs"
repository = "https://github.com/asg017/sqlite-loadable-rs"
keywords = ["sqlite"]
license = "MIT/Apache-2.0"

[dependencies]
sqlite3ext-sys = {version="0.0.1", path="./sqlite3ext-sys"}
sqlite-loadable-macros={version="0.0.2", path="./sqlite-loadable-macros"}
serde = {version="1.0.147", features = ["derive"]}
serde_json = "1.0.87"
bitflags = "1.3.2"

[[example]]
name = "hello"
crate-type = ["cdylib"]

[[example]]
name = "series"
crate-type = ["cdylib"]

[[example]]
name = "scalar"
crate-type = ["cdylib"]

[[example]]
name = "characters"
crate-type = ["cdylib"]