[package]
name = "sqlite-loadable-macros"
version = "0.0.3"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "macros for the sqlite-loadable crate"
homepage = "https://github.com/asg017/sqlite-loadable-rs"
repository = "https://github.com/asg017/sqlite-loadable-rs"
keywords = ["sqlite"]
license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.21"
syn = { version = "1.0.95", features = [ "extra-traits", "full", "fold", "parsing" ] }

[lib]
proc-macro = true
