[package]
name = "sqlite3ext-sys"
version = "0.0.1"
edition = "2021"
authors = ["Alex Garcia <alexsebastian.garcia@gmail.com>"]
description = "FFI bindings to sqlite3ext.h - you probably want libsqlite3-sys, however"
homepage = "https://github.com/asg017/sqlite-loadable-rs"
repository = "https://github.com/asg017/sqlite-loadable-rs"
keywords = ["sqlite"]
license = "MIT/Apache-2.0"

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.46"
